# link-shortener

./: ANALISE_PROJETO.md  SPEC.md  pyproject.toml
app/: dependencies.py  main.py  models.py  schemas.py
app/repositories/: __init__.py  link_repository.py
app/routes/: __init__.py  links.py
app/services/: __init__.py  link_service.py
data/: links.json
